// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Public API smoke tests renders AwesomeButton with before/after slots 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible aws-btn--animate-size"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
      data-aws-btn-role="content"
    >
      <span
        className="aws-btn__slot aws-btn__slot--before"
      >
        <span
          aria-hidden="true"
        >
          ←
        </span>
      </span>
      <span
        className="aws-btn__label"
        data-aws-btn-role="label"
      >
        Continue
      </span>
      <span
        className="aws-btn__slot aws-btn__slot--after"
      >
        <span
          aria-hidden="true"
        >
          →
        </span>
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders AwesomeButton without crashing 1`] = `
<button
  aria-disabled={true}
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible aws-btn--animate-size aws-btn--placeholder aws-btn--disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
      data-aws-btn-role="content"
    />
  </span>
</button>
`;

exports[`Public API smoke tests renders AwesomeButtonProgress without crashing 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--visible aws-btn--animate-size aws-btn--progress"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={
    {
      "--loading-transition-end-speed": "300ms",
      "--loading-transition-speed": "6000ms",
    }
  }
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
      data-aws-btn-role="content"
    >
      <span
        className="aws-btn__label"
        data-aws-btn-role="label"
      >
        <span />
      </span>
    </span>
    <span
      className="aws-btn__extra"
    >
      <span>
        <span
          className="aws-btn__progress"
          data-loading="Wait.."
          data-status="Success!"
        />
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders AwesomeButtonSocial with sharer props 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--github aws-btn--visible aws-btn--animate-size"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
      data-aws-btn-role="content"
    >
      <span
        className="aws-btn__label"
        data-aws-btn-role="label"
      >
        GitHub
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders AwesomeButtonSocial without crashing 1`] = `
<button
  aria-disabled={true}
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible aws-btn--animate-size aws-btn--placeholder aws-btn--disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
      data-aws-btn-role="content"
    />
  </span>
</button>
`;

exports[`Public API smoke tests renders a button without moveEvents 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible aws-btn--animate-size"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
      data-aws-btn-role="content"
    >
      <span
        className="aws-btn__label"
        data-aws-btn-role="label"
      >
        Button
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders a primary button 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible aws-btn--animate-size"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
      data-aws-btn-role="content"
    >
      <span
        className="aws-btn__label"
        data-aws-btn-role="label"
      >
        Button
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders a progress button with explicit success completion 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--visible aws-btn--animate-size aws-btn--progress"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={
    {
      "--loading-transition-end-speed": "300ms",
      "--loading-transition-speed": "6000ms",
    }
  }
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
      data-aws-btn-role="content"
    >
      <span
        className="aws-btn__label"
        data-aws-btn-role="label"
      >
        <span>
          Button
        </span>
      </span>
    </span>
    <span
      className="aws-btn__extra"
    >
      <span>
        <span
          className="aws-btn__progress"
          data-loading="Wait.."
          data-status="Success!"
        />
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders a secondary button 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--secondary aws-btn--visible aws-btn--animate-size"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
      data-aws-btn-role="content"
    >
      <span
        className="aws-btn__label"
        data-aws-btn-role="label"
      >
        Button
      </span>
    </span>
  </span>
</button>
`;
